--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "typedoc": "^0.28.17",
+    "typedoc-plugin-markdown": "^4.10.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.48.0",
     "vite": "^7.3.1"
